// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. no child elements 1`] = `""`;

exports[`2. a single child element 1`] = `
<configweb__Base>
  <div
    className="css-view-1dbjc4n"
  >
    <responsiveweb__SliceContainer>
      <div
        className="css-view-1dbjc4n"
      >
        <responsiveweb__Base>
          <div
            className="css-view-1dbjc4n"
          >
            <responsiveweb__ChildContainer>
              <div
                className="css-view-1dbjc4n"
              >
                <div
                  className="css-text-901oao"
                >
                  standard-1
                </div>
              </div>
            </responsiveweb__ChildContainer>
          </div>
        </responsiveweb__Base>
      </div>
    </responsiveweb__SliceContainer>
  </div>
</configweb__Base>
`;

exports[`3. two child elements 1`] = `
<configweb__Base>
  <div
    className="css-view-1dbjc4n"
  >
    <responsiveweb__SliceContainer>
      <div
        className="css-view-1dbjc4n"
      >
        <responsiveweb__Base>
          <div
            className="css-view-1dbjc4n"
          >
            <responsiveweb__ChildContainer>
              <div
                className="css-view-1dbjc4n"
              >
                <div
                  className="css-text-901oao"
                >
                  standard-1
                </div>
              </div>
            </responsiveweb__ChildContainer>
            <responsiveweb>
              <div
                className="css-view-1dbjc4n"
              />
            </responsiveweb>
            <responsiveweb__ChildContainer>
              <div
                className="css-view-1dbjc4n"
              >
                <div
                  className="css-text-901oao"
                >
                  standard-2
                </div>
              </div>
            </responsiveweb__ChildContainer>
          </div>
        </responsiveweb__Base>
      </div>
    </responsiveweb__SliceContainer>
  </div>
</configweb__Base>
`;

exports[`4. three child elements 1`] = `
<configweb__Base>
  <div
    className="css-view-1dbjc4n"
  >
    <responsiveweb__SliceContainer>
      <div
        className="css-view-1dbjc4n"
      >
        <responsiveweb__Base>
          <div
            className="css-view-1dbjc4n"
          >
            <responsiveweb__ChildContainer>
              <div
                className="css-view-1dbjc4n"
              >
                <div
                  className="css-text-901oao"
                >
                  standard-1
                </div>
              </div>
            </responsiveweb__ChildContainer>
            <responsiveweb>
              <div
                className="css-view-1dbjc4n"
              />
            </responsiveweb>
            <responsiveweb__ChildContainer>
              <div
                className="css-view-1dbjc4n"
              >
                <div
                  className="css-text-901oao"
                >
                  standard-2
                </div>
              </div>
            </responsiveweb__ChildContainer>
            <responsiveweb>
              <div
                className="css-view-1dbjc4n"
              />
            </responsiveweb>
            <responsiveweb__ChildContainer>
              <div
                className="css-view-1dbjc4n"
              >
                <div
                  className="css-text-901oao"
                >
                  standard-3
                </div>
              </div>
            </responsiveweb__ChildContainer>
          </div>
        </responsiveweb__Base>
      </div>
    </responsiveweb__SliceContainer>
  </div>
</configweb__Base>
`;
